--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     namespace 'com.bh.mycurrencyconveter'
     compileSdk 33
@@ -51,8 +53,19 @@ dependencies {
 
     implementation "io.reactivex.rxjava3:rxjava:3.1.1"
 
+    implementation "androidx.room:room-runtime:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.0"
+    implementation "androidx.room:room-paging:2.5.0"
+    implementation "androidx.room:room-rxjava2:2.5.0"
+    implementation "androidx.room:room-testing:2.5.0"
+    implementation "androidx.annotation:annotation:1.5.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.5"
+    implementation "androidx.room:room-ktx:2.5.0"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
