refactor source codes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ plugins {
 apply plugin: 'kotlin-kapt'
 
 android {
-    namespace 'com.bh.mycurrencyconveter'
+    namespace 'com.bh.mycurrencyconverter'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.bh.mycurrencyconveter"
+        applicationId "com.bh.mycurrencyconverter"
         minSdk 24
         targetSdk 33
         versionCode 1
