Fix build failure

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: "kotlin-kapt"
 
 android {
     namespace "com.bh.mycurrencyconverter"
-    compileSdk 33
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.bh.mycurrencyconverter"
@@ -40,35 +40,35 @@ android {
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:1.9.0"
-    implementation "androidx.appcompat:appcompat:1.6.0"
-    implementation "com.google.android.material:material:1.7.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
 
-    implementation "androidx.appcompat:appcompat:1.6.0"
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
 
-    implementation "io.reactivex.rxjava3:rxjava:3.1.1"
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.10'
 
-    implementation "androidx.room:room-runtime:2.5.0"
-    kapt "androidx.room:room-compiler:2.5.0"
-    implementation "androidx.room:room-ktx:2.5.0"
-    implementation "androidx.room:room-paging:2.5.0"
-    implementation "androidx.room:room-rxjava2:2.5.0"
-    implementation "androidx.room:room-testing:2.5.0"
-    implementation "androidx.annotation:annotation:1.5.0"
-    implementation "androidx.fragment:fragment-ktx:1.5.5"
-    implementation "androidx.room:room-ktx:2.5.0"
+    implementation 'androidx.room:room-runtime:2.6.1'
+    kapt 'androidx.room:room-compiler:2.6.1'
+    implementation 'androidx.room:room-ktx:2.6.1'
+    implementation 'androidx.room:room-paging:2.6.1'
+    implementation 'androidx.room:room-rxjava2:2.6.1'
+    implementation 'androidx.room:room-testing:2.6.1'
+    implementation 'androidx.annotation:annotation:1.9.1'
+    implementation 'androidx.fragment:fragment-ktx:1.8.6'
+    implementation 'androidx.room:room-ktx:2.6.1'
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     testImplementation "junit:junit:4.13.2"
-    testImplementation "com.squareup.okhttp3:mockwebserver:3.14.9"
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "androidx.test.ext:junit:1.1.5"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
 
 }
